--- a/Postcard/Base.lproj/Main.storyboard
+++ b/Postcard/Base.lproj/Main.storyboard
@@ -67,13 +67,22 @@
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="16" y="72" width="288" height="75"/>
+                                    <rect key="frame" x="16" y="72" width="288" height="57"/>
+                                </variation>
+                            </label>
+                            <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7X0-wY-Y5B">
+                                <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                                <variation key="widthClass=compact" fixedFrame="YES">
+                                    <rect key="frame" x="16" y="137" width="288" height="50"/>
                                 </variation>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AlbertEinsteinStamp.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="4B8-Kd-TzX">
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="224" y="155" width="80" height="80"/>
+                                    <rect key="frame" x="224" y="201" width="80" height="80"/>
                                 </variation>
                             </imageView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Enter Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zXe-mc-mmQ">
@@ -81,7 +90,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="16" y="243" width="288" height="30"/>
+                                    <rect key="frame" x="16" y="289" width="288" height="30"/>
                                 </variation>
                             </textField>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Enter a message" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZcS-rU-DiY">
@@ -89,7 +98,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="16" y="290" width="288" height="30"/>
+                                    <rect key="frame" x="16" y="336" width="288" height="30"/>
                                 </variation>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OxV-gP-qwQ">
@@ -100,7 +109,7 @@
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <variation key="widthClass=compact" fixedFrame="YES">
-                                    <rect key="frame" x="16" y="188" width="172" height="30"/>
+                                    <rect key="frame" x="16" y="234" width="172" height="30"/>
                                 </variation>
                                 <connections>
                                     <action selector="senMailButtonPressed:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="1E9-G0-AAW"/>
@@ -111,6 +120,7 @@
                         <variation key="default">
                             <mask key="subviews">
                                 <exclude reference="yHd-rb-1ue"/>
+                                <exclude reference="7X0-wY-Y5B"/>
                                 <exclude reference="4B8-Kd-TzX"/>
                                 <exclude reference="zXe-mc-mmQ"/>
                                 <exclude reference="ZcS-rU-DiY"/>
@@ -120,6 +130,7 @@
                         <variation key="widthClass=compact">
                             <mask key="subviews">
                                 <include reference="yHd-rb-1ue"/>
+                                <include reference="7X0-wY-Y5B"/>
                                 <include reference="4B8-Kd-TzX"/>
                                 <include reference="zXe-mc-mmQ"/>
                                 <include reference="ZcS-rU-DiY"/>
@@ -130,6 +141,7 @@
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
+                        <outlet property="Label" destination="7X0-wY-Y5B" id="Kli-bU-Bx9"/>
                         <outlet property="enterMessageTextField" destination="ZcS-rU-DiY" id="zqt-Ut-PQb"/>
                         <outlet property="enterNameTextField" destination="zXe-mc-mmQ" id="evl-Wu-nrf"/>
                         <outlet property="mailButton" destination="OxV-gP-qwQ" id="2d1-nJ-23q"/>
